--- a/client/src/index.css
+++ b/client/src/index.css
@@ -23,3 +23,32 @@ h3 {
 .rating span {
   margin: 0.1rem;
 }
+
+/* for curousels  */
+
+.carousel-item-next,
+.carousel-item-prev,
+.carousel-item.active {
+  display: flex;
+}
+
+.carousel-caption {
+  position: absolute;
+  top: 0;
+}
+
+.carousel-caption h2 {
+  color: #fff;
+}
+
+.carousel img {
+  /* opacity: 0.7; */
+  height: 300px;
+  padding: 30px;
+  margin: 40px;
+  border-radius: 50%;
+}
+
+.carousel a {
+  margin: 0 auto;
+}
